--- a/public/Dockerfile
+++ b/public/Dockerfile
@@ -14,4 +14,8 @@ COPY . .
 EXPOSE 8000
 
 # Start the app
-CMD ["npm", "start"]
+CMD ["node", "server.js"]
+
+
+
+#Dockerfile & server.js must be present in Current Directory (.)  / So i need to Move this Dockerfile from public/dockerfile to .   (i used command mv public/Dockerfile . )
